unpackaged/main/default/objects/Entity__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FA</fullName>
            </value>
            <value>
                <fullName>FDM</fullName>
            </value>
            <value>
                <fullName>FDM10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>