unpackaged/main/default/objects/Entity__c/fields/DefaultBillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>DefaultBillingFrequency__c</fullName>
    <label>Default Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingFrequency</valueSetName>
    </valueSet>
</CustomField>