unpackaged/main/default/objects/Entity__c/fields/Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Entity_Code__c</fullName>
    <label>Entity Code</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>