unpackaged/main/default/objects/Entity__c/fields/ExtensionMode__c.field-meta.xml
<CustomField>
    <fullName>ExtensionMode__c</fullName>
    <label>Default Extension Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Extension_Mode</valueSetName>
    </valueSet>
</CustomField>