unpackaged/main/default/objects/Entity__c/fields/ICS__c.field-meta.xml
<CustomField>
    <fullName>ICS__c</fullName>
    <label>ICS</label>
    <length>115</length>
    <required>true</required>
    <type>Text</type>
</CustomField>