unpackaged/main/default/objects/Entity__c/fields/IncreaseMode__c.field-meta.xml
<CustomField>
    <fullName>IncreaseMode__c</fullName>
    <label>Default Increase Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Increase_Mode</valueSetName>
    </valueSet>
</CustomField>