unpackaged/main/default/objects/Entity__c/fields/NoticePeriodMonths__c.field-meta.xml
<CustomField>
    <fullName>NoticePeriodMonths__c</fullName>
    <label>Default Notice Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>