unpackaged/main/default/objects/Entity__c/fields/PaymentDateCalculationMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentDateCalculationMethod__c</fullName>
    <label>Default Payment Date Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Date_Calculation_Method</valueSetName>
    </valueSet>
</CustomField>