unpackaged/main/default/objects/Entity__c/fields/Price_Multiplicator__c.field-meta.xml
<CustomField>
    <fullName>Price_Multiplicator__c</fullName>
    <label>Price Multiplicator</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>