unpackaged/main/default/objects/Entity__c/fields/RenewalMode__c.field-meta.xml
<CustomField>
    <fullName>RenewalMode__c</fullName>
    <label>Default Renewal Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Renewal_Mode</valueSetName>
    </valueSet>
</CustomField>