unpackaged/main/default/objects/Entity__c/fields/RenewalTerm__c.field-meta.xml
<CustomField>
    <fullName>RenewalTerm__c</fullName>
    <inlineHelpText>In Months.</inlineHelpText>
    <label>Default Renewal Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>