unpackaged/main/default/objects/Entity__c/fields/SubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionTerm__c</fullName>
    <label>Default Subscription Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Default_Subscription_Term</valueSetName>
    </valueSet>
</CustomField>