unpackaged/main/default/objects/Entity__c/fields/Zuora_Entity__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Entity__c</fullName>
    <label>Zuora Entity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>