unpackaged/main/default/objects/Entity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entity_Code__c</columns>
    <columns>Active__c</columns>
    <columns>Country__c</columns>
    <columns>ICS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>